# steam-family-collections

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  config.example.toml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  docs.yml
configuration/: index.html
core/: children.py  collection.py  config.py  database.py  mobygames.py  ratings.py  steam.py
demo/: games.json  index.html
demo/children/: Alex.json  Emma.json  Sam.json
docs/: configuration.md  demo.md  index.md  installation.md  usage.md
installation/: index.html
plans/: plan.md
scripts/: take_screenshots.py
search/: search_index.json
tests/: test_children.py  test_collection.py  test_database.py  test_mobygames.py  test_ratings.py
tui/: children_screen.py  collection_screen.py  library.py  modals.py
usage/: index.html
