[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "steam-family-collections"
version = "0.1.0"
description = "TUI app to manage age-appropriate Steam game collections for children"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.70.0",
    "requests>=2.28.0",
]

[project.scripts]
steam-family-collections = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
