[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "/main.py",
    "/core/",
    "/tui/",
    "/demo/",
    "/config.example.toml",
]

[project]
name = "steam-family-collections"
version = "0.1.0"
description = "TUI app to manage age-appropriate Steam game collections for children"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "textual>=0.70.0",
    "requests>=2.28.0",
]

[project.scripts]
steam-family-collections = "main:main"

[project.urls]
Repository = "https://github.com/dave-tucker/steam-family-collections"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.15.12",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
